--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Gabriel Ferreira Araujo"
+  name             : "Gabriel F. Araujo"
   avatar           : "profile_final.jpg"
   bio              : 
   location         : "New York, New York"
@@ -96,7 +96,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "https://github.com/gabrujo"
+  github           : "gabrujo"
   google_plus      :
   keybase          :
   instagram        :
