--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,13 +1,14 @@
 # main links links
 main:
+
+  - title: "Education"
+     url: /talks/ 
+
+  - title: "Accomplishments"
+    url: /teaching/ 
+
   - title: "Publications"
-    url: /publications/
-
-  # - title: "Talks"
-  #   url: /talks/    
-
-  # - title: "Teaching"
-  #   url: /teaching/    
+    url: /publications/   
     
   # - title: "Portfolio"
   #   url: /portfolio/
