--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Gabriel F. Araujo"
   avatar           : "profile_final.jpg"
-  bio              : 
+  bio              : "Security Engineer"
   location         : "New York, New York"
   employer         :
   pubmed           : 
