--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,11 +1,11 @@
 # main links links
 main:
 
-  - title: "Education"
-     url: /talks/ 
+  #- title: "Education"
+   #  url: /talks/ 
 
-  - title: "Accomplishments"
-    url: /teaching/ 
+  #- title: "Accomplishments"
+   # url: /teaching/ 
 
   - title: "Publications"
     url: /publications/   
