--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,8 +1,8 @@
 # main links links
 main:
 
-  #- title: "Education"
-   #  url: /talks/ 
+  - title: "Education"
+    url: /education/ 
 
   #- title: "Accomplishments"
    # url: /teaching/ 
