--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Gabriel F. Araujo"
   avatar           : "profile_final.jpg"
   bio              : " "
-  location         : "New York, New York"
+  location         : 
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=pRzzxRkAAAAJ&hl=en"
