--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,14 +4,14 @@ main:
   - title: "Education"
     url: /education/ 
 
-  #- title: "Accomplishments"
-   # url: /teaching/ 
+  - title: "Achievements"
+    url: /achievements/ 
 
   - title: "Publications"
     url: /publications/   
     
-  # - title: "Portfolio"
-  #   url: /portfolio/
+  - title: "Experience"
+     url: /experience/
         
   # - title: "Blog Posts"
   #   url: /year-archive/
