--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,8 +10,8 @@ main:
   - title: "Publications"
     url: /publications/   
     
-  #- title: "Experience"
-   #  url: /experience/
+  - title: "Experience"
+     url: /experience/
         
   # - title: "Blog Posts"
   #   url: /year-archive/
